--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>ST4</artifactId>
             <version>4.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.7.2</version>
+        </dependency>
     </dependencies>
 
 </project>
